minor updates to EPA FRS ID carceral notebook

--- a/EPA Facilities Registry Data to ID Incarceration Facilities.ipynb
+++ b/EPA Facilities Registry Data to ID Incarceration Facilities.ipynb
@@ -21,9 +21,10 @@
     "\n",
     "#### Recommendations\n",
     "- we cannot programatically ID all incarceration facilities from these 4.1 million records, using this dataset's features\n",
-    "- we'll likely need to combine programmatic approaches and manual coding\n",
-    "- a list of known incarceration sites (discussed offline) will be useful as a benchmark and starting point\n",
-    "- even with a list of known incarceration sites, EPA 'facilities' may include sites and places beyond the 'storefront' site locations (e.g. underwater tanks, laundry facilities)\n",
+    "- we'll likely need to combine programmatic approaches with manual review/coding\n",
+    "- a list of known incarceration sites (such as [this one from Homeland Security](https://hifld-geoplatform.opendata.arcgis.com/datasets/2d6109d4127d458eaf0958e4c5296b67_0)) may be useful as a starting point\n",
+    "- another approach is to start from the FRS data here and use reasonable search criteria to ID as many carceral facilities as possible, without matching to a known list (update: we've since learned that in fact many prisons are not registered with the EPA)\n",
+    "- even with a list of known incarceration sites, EPA 'facilities' may include sites and places beyond the 'storefront' locations with recognizable names (e.g. underwater tanks, laundry facilities)\n",
     "\n",
     "\n",
     "#### Summary\n",
@@ -43,6 +44,7 @@
     "\t\t- e.g. Facility name 'CCI' for California Correctional Institution, returns 'VACCINATION' etc.\n",
     "\t- many facilities use unintuitve abbreviations\n",
     "\t- a strict list of match strings ID'd 2,845 facilities not coded by NAICS/SIC (still some false positives)\n",
+    "    - (**update**: our group performed preliminary probabilistic fuzzy matching in R via RecordLinkage, between ECHO/FRS data and [HIFLD](https://hifld-geoplatform.opendata.arcgis.com/datasets/2d6109d4127d458eaf0958e4c5296b67_0), using several fields (including name); results still required manual coding, likely suffer from many prisons just not being registered with EPA)\n",
     "\n",
     "\n",
     "- [Location: latitude/longitude](#latlong)\n",
@@ -51,6 +53,7 @@
     "    - long/lat records are collected by methods of varying accuracy, including:\n",
     "        - street address, zip code centroid, unknown\n",
     "    - looking at long/lat records for NAICS/SIC coded incarceration facilities, we still find long/lat methods of varying accuracy\n",
+    "    - (**update**: I performed a preliminary spatial join in R using FRS and [HIFLD](https://hifld-geoplatform.opendata.arcgis.com/datasets/2d6109d4127d458eaf0958e4c5296b67_0) geodatabase files; results still required manual coding, likely suffer from many prisons just not being registered with EPA)\n",
     "\n",
     "\n",
     "- [Location: address](#address)\n",
@@ -189,6 +192,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Confirming REGISTRY_ID is a unique key (REGISTRY_ID is not unique in the [FRS geodatabase files](https://www.epa.gov/frs/geospatial-data-download-service) used subsequently for a spatial join); where instead the key was REGISTRY_ID + statute):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#confirm Registry IDs are unique\n",
+    "sum(fac['REGISTRY_ID'].duplicated())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"industrycodes\"></a>\n",
     "## Using NAICS/SIC codes to ID facilities related to incarceration\n",
     "### Notes\n",
@@ -197,7 +228,7 @@
     "<a href=\"#top\">Back to Top of Notebook</a>\n",
     "\n",
     "##### Inspect NAICS / SIC codes, how many missing values?\n",
-    "We find 66% of our 4+ million records have no NAICS or SIC code. Some records are assigned more than code."
+    "We find 66% of our 4+ million records have no NAICS or SIC code. Some records are assigned more than one code."
    ]
   },
   {
